--- a/clickenv/website/templates/about.html
+++ b/clickenv/website/templates/about.html
@@ -6,38 +6,32 @@
     <div class="person1">
         <artilce>
             <header>
-                <img src="#" title="Jibril Isah"/>
-                <h3>Backend Devoloper</h3>
+                <img src="static/img/nb2.jpg" alt="Jibril" title="Jibril Isah" />
+                <h3>Frontend Devoloper</h3>
+                <a class='link' href="https://www.linkedin.com/in/jibril-isah-65b67489">Linkedin</a>
+                <a class='link' href="https://github.com/Nbee2">Github</a>
+                <a class='link' href="https://twitter.com/NBEE2">Twitter</a>
             </header>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/jibril-isah-65b67489">https://www.linkedin.com/in/jibril-isah-65b67489</a></li>
-                <li><a href="https://github.com/Nbee2">https://github.com/Nbee2</a></li>
-                <li><a href="https://twitter.com/NBEE2">https://twitter.com/NBEE2</a></li>
-            </ul>
-        </artilce>
+        </artilce><br>
     <div class="person2">
         <article>
         <header>
-            <img src="#" title="Martha Ukpong"/>
-            <h3>Backend Devoloper</h3>
+            <img src="static/img/MU.jpg" alt="Marta" title="Martha Ukpong"/>
+            <h3>Frontend Devoloper</h3>
+            <a class='link' href="https://www.linkedin.com/in/martha-ukpong-va">Linkedin</a>
+            <a class='link' href="https://github.com/marista032">Github</a>
+            <a class='link' href="#">Twitter</a>
         </header>
-            <ul>
-                <li><a href="#">Read more</a></li>
-                <li><a href="#">Read more</a></li>
-                <li><a href="#">Read more</a></li>
-            </ul>
-        </article>
+        </article><br>
     <div class="person3">
         <artilce>
         <header>
             <img src="#" title="Fadekemi Iruegbukpe"/>
-            <h3>Backend Devoloper</h3>
+            <h3>Frontend Devoloper</h3>
+            <a class='link' href="#">Linkedin</a>
+            <a class='link' href="#">Github</a>
+            <a class='link' href="#">Twitter</a>
         </header>
-            <ul>
-                <li><a href="#">Read more</a></li>
-                <li><a href="#">Read more</a></li>
-                <li><a href="#">Read more</a></li>
-            </ul>
         </artilce>  
 </div>
 <br>
